--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @import 'tailwindcss/utilities';
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Roboto, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -23,6 +23,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -36,24 +37,43 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 28px;
+  line-height: 36px;
+  color: #1FB6FA;
+}
+
+span.text-sm {
+  padding: 0px 5.45px 5px 0px;
+  line-height: 20px;
+  color: #7C8391;
+}
+
+span.text-sm a {
+  color: #1FB6FA;
 }
 
 button {
-  border-radius: 8px;
+  display: flex;
+  margin-top: 29px;
+  border-radius: 4px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
+  padding: 4px 112.91px 12px 113.09px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  align-items: center;
   font-family: inherit;
-  background-color: #1a1a1a;
+  color: #F1F5F9;
+  background-color: #21CA92 !important;
   cursor: pointer;
   transition: border-color 0.25s;
+
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -64,10 +84,29 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+input {
+  width: 378px;
+  height: 42px;
+  border-radius: 4px;
+  border: 1px solid #A5B4C9;
+  padding: 8.5px 9px 14.5px 9px;
+  margin: 8.5px 0 0;
+}
+
+::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18.75px;
+  color: #A5B4C9;
 }
